--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,11 +7,12 @@
         <header>
             <h1><a href="/">Django Blog</a></h1>
         </header>
-
+        {% for post in posts %}
         <article>
-            <time>published:14.06.2020,12:14</time>
-            <h2><a href="">First Post</a></h2>
-            <p> Data of first post</p>
+            <time>published:{{post.published_date}}</time>
+            <h2><a href="">{{post.title}}</a></h2>
+            <p>{{post.text|linebreaksbr}} </p>
         </article>
+        {% endfor %}
     </body>
 </html>
