--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
                         {% include './icons/file-earmark-plus.svg' %}
                     </a>
                 {% endif %}
-                <h1><a href="/">Django Blog</a></h1>
+                <h1><a href="/">My Blog</a></h1>
             </div>
         </header>
         <main class="container">
